Fix footer alignment (#73)

--- a/packages/kununu-footer/index.scss
+++ b/packages/kununu-footer/index.scss
@@ -9,6 +9,11 @@
   width: 100%;
 }
 
+.contentSection {
+  margin-right: -20px;
+  margin-left: -20px;
+}
+
 .simpleMobile {
   padding-top: 0;
 
